--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
         uses: android-actions/setup-android@v3
       
       - name: Make gradlew executable
-        run: chmod +x ./gradlew
+        run: chmod +x ./gradlew  # <-- Fixes permission issue
       
       - name: Build Debug APK
-        run: ./gradlew assembleDebug  # ← Actually builds the APK
+        run: ./gradlew assembleDebug  # <-- Actually builds
       
       - name: Upload APK
         uses: actions/upload-artifact@v4
