--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
       
       - name: Setup Java
         uses: actions/setup-java@v4
@@ -20,13 +21,13 @@ jobs:
         uses: android-actions/setup-android@v3
       
       - name: Make gradlew executable
-        run: chmod +x ./gradlew  # <-- Fixes permission issue
+        run: chmod +x ./gradlew
       
       - name: Build Debug APK
-        run: ./gradlew assembleDebug  # <-- Actually builds
+        run: ./gradlew assembleDebug
       
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: panda-task-apk
+          name: apk
           path: app/build/outputs/apk/debug/app-debug.apk
